# electro_shop

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  start_web.sh
myshop/cart/: cart.py  context_processors.py  forms.py  views.py
myshop/cart/templates/cart/: detail.html
myshop/coupons/: urls.py  views.py
myshop/coupons/migrations/: 0001_initial.py
myshop/myshop/: settings.py  urls.py
myshop/myshop/fixtures/: users.json
myshop/orders/: admin.py  models.py  tasks.py  urls.py  views.py
myshop/orders/migrations/: 0001_initial.py  0002_alter_order_options_alter_orderitem_options.py  0003_order_order_reference.py  0004_order_coupon_order_discount.py  0005_order_profile.py
myshop/orders/templates/admin/orders/order/: detail.html
myshop/orders/templates/orders/order/: create.html  created.html  pdf.html
myshop/payment/: tasks.py  urls.py  views.py  wayforpay.py
myshop/payment/templates/payment/: canceled.html  completed.html  process.html
myshop/settings/: asgi.py  settings.py  urls.py  wsgi.py
myshop/shop/: models.py  recommender.py  urls.py  views.py
myshop/shop/fixtures/: shop.json
myshop/shop/migrations/: 0001_initial.py  0002_product_video.py
myshop/shop/static/css/: base.css
myshop/shop/templates/shop/: base.html
myshop/shop/templates/shop/product/: detail.html  list.html
myshop/templates/account/: base_entrance.html  logout.html
myshop/templates/allauth/layouts/: base.html
myshop/users/: admin.py  models.py  signals.py  views.py
myshop/users/migrations/: 0001_initial.py
myshop/users/templates/users/: profile.html
